--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickBioLink</title>
+    <title>ReArchivu Link</title>
     <link rel="icon" type="image/ico" href="">
     <link rel="shortcut icon" type="image/ico" href="">
     <meta id="ogTitle" property="og:title" content="Bio Links" />
@@ -36,14 +36,14 @@
         * primary email address. To hash your email you can use something like:
         * https://www.md5hashgenerator.com/ (not verified for security)
         */
-        var emailMd5Hash = "cb8419c1d471d55fbca0d63d1fb2b6ac";
+        var emailMd5Hash = "5b9f29e3c44c3b6da50e709711a8318a";
 
         /*
         * Choose to show an email link button at the end of the link list.
         * Set the email address to use in the emailAddress variable below.
         */
         var showEmailLink = true;
-        var emailAddress = "hello@example.com";
+        var emailAddress = "contact@rearchivu.com";
 
         /*
         * Custom Video YouTube Player
@@ -404,7 +404,7 @@
         if (disableCredit == true) {
             document.getElementById("credit").style = "display: none;"
         } else {
-            document.getElementById("credit").innerHTML = "<a rel='noopener' href='https://github.com/mackenly/quickbiolinks' target='_blank'>Built with QuickBioLinks</a>"
+            document.getElementById("credit").innerHTML = "<a rel='noopener' href='https://sabako.id' target='_blank'>Powered by SABAKO</a>"
         }
     </script>
     <style>
